# home_monitoring

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  example_configuration.yaml  example_monitoring_config.yaml  home_monitoring.service  install_env.md  install_env.txt  launch_monitoring.sh  launch_monitoring_template.sh  logging_config.yaml  pyproject.toml  template_home_mointoring.service
.github/workflows/: docker-publish.yml
example_config/: example_configuration.yaml  logging_config.yaml  monitoring_config.yaml
home_monitoring/: config.py  influxdb_connector.py  launch_monitoring.py  measurement_logger.py  mqtt_connector.py  sensor_publisher.py  utils.py
home_monitoring/bme_sensor/: bme280_sensor.py  bme680.py  bme_sensor.py  test_bme280.py  test_bme680.py
home_monitoring/influxdb/: influxdb_connector.py  test_connector.py
home_monitoring/measurements/: __init__.py  bme280_sensor.py  bme680_sensor.py  openweather.py  sensorhub.py  system_usage.py  teleinfo.py
home_monitoring/openweather/: openweather.py  openweather_api.py  test_openweather.py
home_monitoring/psql/: clear_database.py  psql_connector.py
home_monitoring/sensorhub/: sensor_connector.py  sensorhub.py
home_monitoring/sensors/: __init__.py  bme280_sensor.py  bme680_sensor.py  picamera_sensor.py  system_usage.py  teleinfo.py
home_monitoring/system_usage/: system_usage.py
home_monitoring/teleinfo/: teleinfo.py  teleinfo_connector.py  test_teleinfo.ipynb  test_teleinfo.py  test_teleinfo_reactive.py
src/openweather/: main.py
src/psql/: create_tables.sql
src/sensorhub/: main.py  test_psql.ipynb
test/: test_influxdb.py  test_sensorhub.py
