[project]
name = "home-monitoring"
version = "1.0.0"
description = "Home sensors logging"
authors = [{ name = "tdurouchoux", email = "thibault.durouchoux@gmail.com" }]
requires-python = ">=3.9,<3.10"
readme = "README.md"
dependencies = [
    "influxdb-client>=1.34.0,<2",
    "reactivex>=4.0.4,<5",
    "pyyaml>=6.0,<7",
    "click>=8.1.3,<9",
    "tqdm>=4.65.0,<5",
    "omegaconf>=2.3.0,<3",
    "rich>=13.7.1,<14",
    "python-dotenv>=1.0.1,<2",
]

[project.scripts]
launch_monitoring = "home_monitoring.launch_monitoring:main"

[dependency-groups]
teleinfo = ["pyserial>=3.5,<4"]
system_usage = ["psutil>=5.9.4,<6"]
bme_sensor = [
    "pimoroni-bme280>=0.1.1,<0.2",
    "bme680>=1.1.1,<2",
]

[tool.uv]
default-groups = [
    "sensorhub",
    "openweather",
    "teleinfo",
    "system_usage",
    "bme_sensor",
]

[[tool.uv.index]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
default = true

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[tool.hatch.build.targets.sdist]
include = ["home_monitoring"]

[tool.hatch.build.targets.wheel]
include = ["home_monitoring"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
